// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inject imports and exports 1`] = `
"import test from "test";
import { ref } from "vue";
import "style.css";
function myComponent() {
    const count = ref(0);
}
export { ref } from "vue";
export * as all;
"
`;

exports[`transform function block 1`] = `
"const add = ()=>{
    return a + b;
};
"
`;

exports[`transform function block 2`] = `
"function add(a, b) {
    return a + b;
}
"
`;
